<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World!</string>
    <string name="app_name">HazMatGuru</string>
    <string name="search_chemical_name">Type in name of chemical</string>
    <string name="search_un_id">or type in UN ID#</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_unknown">Click here if unknown</string>
    <string name="lbl_charts">Charts</string>
    <string name="lbl_version">Version 1.0</string>
    <string name="lbl_copyright">Copyright \u00A9 2012 HazMatIQ, LLC</string>

</resources>