<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/search_background"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/banner" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:background="@color/search_background_container"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dip"
            android:text="@string/search_chemical_name"
            android:textColor="@color/search_label"
            android:textSize="12dip" />

        <AutoCompleteTextView
            android:id="@+id/edtSearch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/search_label" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dip"
            android:text="@string/search_un_id"
            android:textColor="@color/search_label"
            android:textSize="12dip" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/search_label" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="onClickSearch"
            android:text="@string/lbl_search"
            android:textColor="@color/search_label" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_unknown"
            android:textColor="@color/search_label" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="10dip"
        android:text="@string/lbl_version"
        android:textColor="@color/search_label"
        android:textSize="12dip" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/lbl_copyright"
        android:textColor="@color/search_label"
        android:textSize="12dip" />

</LinearLayout>