<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hazmat="http://schemas.android.com/apk/res/com.rel.hazmat"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/search_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="10dip"
        android:paddingRight="10dip"
        android:paddingTop="60dip" >

        <com.rel.hazmat.widgets.TypefacedTextView
            style="@style/lbc_ics_header_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Search for Hazardous Materials"
            hazmat:typeface="fonts/Roboto-Medium.ttf" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dip"
            android:background="@color/ics_textcolor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dip"
        android:background="@color/search_background_container"
        android:orientation="vertical"
        android:padding="16dip" >

        <com.rel.hazmat.widgets.TypefacedEditText
            android:id="@+id/edtSearchName"
            style="@style/ics_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:hint="@string/search_chemical_name"
            hazmat:typeface="fonts/Roboto-Light.ttf" />

        <!-- <AutoCompleteTextView -->
        <!-- android:id="@+id/edtSearch" -->
        <!-- android:layout_width="fill_parent" -->
        <!-- android:layout_height="wrap_content" -->
        <!-- android:layout_gravity="center_horizontal" -->
        <!-- android:textColor="@color/search_label" /> -->

        <com.rel.hazmat.widgets.TypefacedEditText
            android:id="@+id/edtSearchUNID"
            style="@style/ics_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_un_id"
            hazmat:typeface="fonts/Roboto-Light.ttf" />

        <com.rel.hazmat.widgets.TypefacedButton
            style="@style/ics_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:gravity="center_horizontal"
            android:onClick="onClickSearch"
            android:text="@string/lbl_search"
            hazmat:typeface="fonts/Roboto-Regular.ttf" />

        <com.rel.hazmat.widgets.TypefacedButton
            style="@style/ics_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="onClickSearchUnknown"
            android:text="@string/lbl_unknown"
            hazmat:typeface="fonts/Roboto-Regular.ttf" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginBottom="70dip"
        android:layout_weight="1"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical" >

        <com.rel.hazmat.widgets.TypefacedTextView
            android:id="@+id/lblVersion"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:text="@string/lbl_version"
            android:textColor="@color/search_label"
            android:textSize="11dip"
            hazmat:typeface="fonts/Roboto-Regular.ttf" />

        <com.rel.hazmat.widgets.TypefacedTextView
            android:id="@+id/lblCopyright"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:text="@string/lbl_copyright"
            android:textColor="@color/search_label"
            android:textSize="11dip"
            hazmat:typeface="fonts/Roboto-Light.ttf" />
    </LinearLayout>

</LinearLayout>